fix horizontal scroll on tablet/mobile version

--- a/sass/layouts/_front-page.scss
+++ b/sass/layouts/_front-page.scss
@@ -1,3 +1,6 @@
+body {
+  overflow-x: hidden;
+}
 
 section {
   animation: fade-in;
@@ -103,9 +106,16 @@ h2 {
     animation-duration: 20s;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
-    @media screen and (max-width: 700px) {
+    @media screen and (max-width: 900px) {
       display: none;
     }
   }
 }
 
+.main-character {
+  width: 100vw;
+}
+
+#place {
+  background-image: url("./assets/images/Studio_Koukaki-image_place.png") !important;
+}
